--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node": "22"
   },
   "dependencies": {
-    "vue": "^3.4.27"
+    "vue": "^3.4.27",
+    "vue-i18n": "^11.0.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
