--- a/.editorconfig
+++ b/.editorconfig
@@ -9,9 +9,31 @@ insert_final_newline = false
 max_line_length = 120
 tab_width = 4
 
-[*.vue]
+[{*.vue,*.ts}]
 indent_size = 2
 tab_width = 2
+insert_final_newline = true
+ij_typescript_spaces_within_imports = true
+ij_typescript_spaces_within_object_literal_braces = true
+
+[*.html]
+ij_html_add_new_line_before_tags = body,div,p,form,h1,h2,h3
+ij_html_align_attributes = true
+ij_html_align_text = true
+ij_html_attribute_wrap = off
+ij_html_do_not_align_children_of_min_lines = 0
+ij_html_do_not_break_if_inline_tags = title,h1,h2,h3,h4,h5,h6,p
+ij_html_do_not_indent_children_of_tags = thead,tbody,tfoot
+ij_html_keep_indents_on_empty_lines = false
+ij_html_keep_line_breaks = true
+ij_html_keep_line_breaks_in_text = true
+ij_html_keep_whitespaces = false
+ij_html_keep_whitespaces_inside = span,pre,textarea
+ij_html_quote_style = double
+ij_html_remove_new_line_before_tags = br
+ij_html_space_around_equality_in_attribute = false
+ij_html_space_inside_empty_tag = false
+ij_html_text_wrap = normal
 
 [.editorconfig]
 ij_editorconfig_align_group_field_declarations = false
