--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "node": "22"
   },
   "dependencies": {
+    "luxon": "^3.5.0",
     "vue": "^3.4.27",
     "vue-i18n": "^11.0.1"
   },
   "devDependencies": {
+    "@types/luxon": "^3.4.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.4.5",
     "vite": "^6.0.0",
