--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,8 +6,7 @@
   "packageRules": [
     {
       "matchUpdateTypes": [
-        "minor",
-        "patch"
+        "minor"
       ],
       "automerge": true,
       "minimumReleaseAge": "1 week",
