--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,21 +1,25 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "labels": [
-    "dependencies"
-  ],
-  "packageRules": [
-    {
-      "matchUpdateTypes": [
-        "minor"
-      ],
-      "automerge": true,
-      "minimumReleaseAge": "1 week",
-      "matchPackageNames": [
-        "*"
-      ]
-    }
-  ],
-  "extends": [
-    "config:recommended"
-  ]
+    "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+    "labels": [
+        "dependencies"
+    ],
+    "lockFileMaintenance": {
+        "enabled": true,
+        "automerge": true
+    },
+    "packageRules": [
+        {
+            "matchUpdateTypes": [
+                "minor"
+            ],
+            "automerge": true,
+            "minimumReleaseAge": "1 week",
+            "matchPackageNames": [
+                "*"
+            ]
+        }
+    ],
+    "extends": [
+        "config:recommended"
+    ]
 }
