Update settings for major dependency updates

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -10,9 +10,9 @@
     "packageRules": [
         {
             "matchUpdateTypes": [
-                "minor"
+                "major"
             ],
-            "automerge": true,
+            "automerge": false,
             "minimumReleaseAge": "1 week",
             "matchPackageNames": [
                 "*"
